--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <div class="card-header scope">
                 <h3 style="color: blue">Scopes</h3>
               </div>
-              <div class="divTable row px-2 pb-2">
+              <div class="divTable row px-2">
                 <div class="IN col-lg-6 col-md-12">
                   <h4>IN</h4>
                   <i class="bi bi-1-circle"></i
@@ -112,7 +112,7 @@
                   <i class="bi bi-question-circle-fill text-position"></i
                   ><span class="ps-2">Tư vấn kế hoạch triển khai</span>
                 </li>
-                <li class="list-group-item pt-3 pb-3">
+                <li class="list-group-item pt-3 pb-2">
                   <i class="bi bi-question-circle-fill text-position"></i
                   ><span class="ps-2">Tư vấn các thủ tục pháp lý</span>
                 </li>
